# api/@types/index.ts
@@ -54,7 +54,6 @@ export type Domain_CreateAccountRequest = {
   tech_tags?: number[] | undefined
   user_id: string
   username: string
-  icon?: string | undefined
 }
 
 export type Domain_CreateBookmarkRequest = {
@@ -91,7 +90,7 @@ export type Domain_CreateRoomRequestBody = {
 export type Domain_GetRoomResponse = {
   create_at?: string | undefined
   description?: string | undefined
-  hackathon?: Domain_HackathonInfo | undefined
+  hackathon?: Domain_RoomHackathonInfo | undefined
   is_status?: boolean | undefined
   member_limit?: number | undefined
   members_frameworks?: Domain_RoomFramework[] | undefined
@@ -99,18 +98,6 @@ export type Domain_GetRoomResponse = {
   now_member?: Domain_NowRoomAccounts[] | undefined
   room_id?: string | undefined
   title?: string | undefined
-}
-
-export type Domain_HackathonInfo = {
-  description?: string
-  expired?: string
-  hackathon_id?: number | undefined
-  icon?: string | undefined
-  link?: string | undefined
-  name?: string | undefined
-  start_date?: string | undefined
-  status_tag?: Repository_StatusTag[] | undefined
-  term?: number | undefined
 }
 
 export type Domain_HackathonResponses = {
@@ -155,6 +142,16 @@ export type Domain_NowRoomAccounts = {
 export type Domain_RoomFramework = {
   count?: number | undefined
   framework?: Repository_Framework | undefined
+}
+
+export type Domain_RoomHackathonInfo = {
+  hackathon_id?: number | undefined
+  icon?: string | undefined
+  link?: string | undefined
+  name?: string | undefined
+  start_date?: string | undefined
+  status_tag?: Repository_StatusTag[] | undefined
+  term?: number | undefined
 }
 
 export type Domain_RoomTechTags = {
