# swagger.json
@@ -1347,7 +1347,7 @@
                     "type": "string"
                 },
                 "hackathon": {
-                    "$ref": "#/definitions/domain.HackathonInfo"
+                    "$ref": "#/definitions/domain.RoomHackathonInfo"
                 },
                 "is_status": {
                     "type": "boolean"
@@ -1378,35 +1378,6 @@
                 },
                 "title": {
                     "type": "string"
-                }
-            }
-        },
-        "domain.HackathonInfo": {
-            "type": "object",
-            "properties": {
-                "hackathon_id": {
-                    "type": "integer"
-                },
-                "icon": {
-                    "type": "string"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "start_date": {
-                    "type": "string"
-                },
-                "status_tag": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/repository.StatusTag"
-                    }
-                },
-                "term": {
-                    "type": "integer"
                 }
             }
         },
@@ -1527,6 +1498,35 @@
                 },
                 "framework": {
                     "$ref": "#/definitions/repository.Framework"
+                }
+            }
+        },
+        "domain.RoomHackathonInfo": {
+            "type": "object",
+            "properties": {
+                "hackathon_id": {
+                    "type": "integer"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "status_tag": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/repository.StatusTag"
+                    }
+                },
+                "term": {
+                    "type": "integer"
                 }
             }
         },
